<resources>

    <string name="app_name">Quintersol</string>
    <string name="balance">Balance</string>
    <string name="cash">Cash</string>
    <string name="product">Products&amp;Services</string>
    <string name="transactions">TRANSACTIONS</string>
    <string name="expenses">Expenses</string>
    <string name="invoices">Invoices</string>
    <string name="sales">Sales Receipts</string>
    <string name="reports">REPORTS</string>
    <string name="profitloss">Profit and Loss</string>
    <string name="balancesheet">Balance Sheet</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>

</resources>
