<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_products"
            android:title="@string/product" />

    </group>

    <item android:title="@string/transactions">
    <menu>
        <item
            android:id="@+id/nav_expense"
            android:title="@string/expenses" />
        <item
            android:id="@+id/nav_invoices"
            android:title="@string/invoices" />
        <item
            android:id="@+id/nav_sales"
            android:title="@string/sales" />
    </menu>
</item>
    <item android:title="@string/reports">
        <menu>
            <item
                android:id="@+id/nav_profitloss"
                android:title="@string/profitloss" />
            <item
                android:id="@+id/nav_balancesheet"
                android:title="@string/balancesheet" />
        </menu>
    </item>

</menu>